# seasonable

./: noxfile.py  setup.cfg
doc/: conf.py  index.rst
src/seasonable/: buttondown.py  fastmail.py  habitica.py  todoist.py  toggl.py
src/seasonable/examples/: fastmail.py
