[metadata]
name = seasonable
version = 2021.5.1
description = TBD
long_description = TBD
license = BSD 3-Clause License

[options]
package_dir=
    =src
packages=find:

[options.extras_require]
test = 
  coverage
  virtue
lint = 
  black
  mypy
  flake8
  pylint
doc = sphinx

[options.packages.find]
where=src